feat: add GET /txs api
